| Summary: | ASTERISK-29829: app_mp3: Throw warning if attempting to play a nonexistent stream | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-01-02 19:11:45.000-0600 | Date Closed: | 2022-01-05 10:55:36.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_mp3 |
| Versions: | 18.9.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The MP3Player application currently does not throw any warning if attempting to play an invalid stream (typically, a stream that worked at one point but no longer exists).
The application will now throw a warning if a nonexistent stream is provided, before exiting. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-01-02 19:11:45.585-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-01-05 10:55:36.485-0600 Change 17810 merged by Joshua Colp: app_mp3: Throw warning on nonexistent stream [https://gerrit.asterisk.org/c/asterisk/+/17810|https://gerrit.asterisk.org/c/asterisk/+/17810] By: Friendly Automation (friendly-automation) 2022-01-05 10:55:43.852-0600 Change 17809 merged by Joshua Colp: app_mp3: Throw warning on nonexistent stream [https://gerrit.asterisk.org/c/asterisk/+/17809|https://gerrit.asterisk.org/c/asterisk/+/17809] By: Friendly Automation (friendly-automation) 2022-01-05 10:55:54.116-0600 Change 17811 merged by Joshua Colp: app_mp3: Throw warning on nonexistent stream [https://gerrit.asterisk.org/c/asterisk/+/17811|https://gerrit.asterisk.org/c/asterisk/+/17811] By: Friendly Automation (friendly-automation) 2022-01-05 10:56:03.348-0600 Change 17760 merged by Joshua Colp: app_mp3: Throw warning on nonexistent stream [https://gerrit.asterisk.org/c/asterisk/+/17760|https://gerrit.asterisk.org/c/asterisk/+/17760] | ||